--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Ok</h1>
-        <button onclick="hello.php">phphere</button>
+        <button onclick="location.href ='hello.php'">phphere</button>
     </body>
 </html>
